--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "openid-connect",
 	"version": "1.0.0",
 	"author": "toweringcloud",
-	"description": "nomadcoders react firebase authentication",
-	"homepage": "https://nomadcoders.co/nwitter",
+	"description": "typescript react authentication using firebase",
+	"homepage": "https://github.com/toweringcloud/openid-connect",
 	"license": "MIT",
 	"type": "module",
 	"scripts": {
