--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"firebase": "^10.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.14.2",
 		"styled-components": "^6.0.7",
 		"styled-reset": "^4.5.1"
@@ -33,6 +34,7 @@
 	"devDependencies": {
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
+		"@types/react-helmet": "^6.1.8",
 		"@types/styled-components": "^5.1.28",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
